--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12",
+    "@rails/actioncable": "^8.0.0",
     "htmx.org": "^1.9.12",
     "sass": "^1.81.0"
   }
